--- a/src/main/resources/ventus/rggwheel/retroBoy.fxml
+++ b/src/main/resources/ventus/rggwheel/retroBoy.fxml
@@ -13,7 +13,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.TextArea?>
 <Pane fx:id="root_pane" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ventus.rggwheel.controllers.RetroBoyController">
-    <AnchorPane fx:id="gp" >
+    <AnchorPane fx:id="gp">
         <ImageView fx:id="bg_mono" fitHeight="1035.0" fitWidth="1480.0" mouseTransparent="true"
                    pickOnBounds="true">
             <effect>
@@ -28,62 +28,64 @@
             </effect>
             <Image url="@graphics/background_color.png"/>
         </ImageView>
-        <AnchorPane fx:id="ap_start_mono" prefHeight="647.0" prefWidth="1335.0">
-            <Label alignment="CENTER" contentDisplay="CENTER" layoutX="372.0" layoutY="695.0" prefHeight="218.0"
-                   prefWidth="802.0" text="Press START" textAlignment="CENTER" textFill="#4a490f">
-                <font>
-                    <Font name="Bit Cell" size="150.0"/>
-                </font>
-            </Label>
-            <Label layoutX="375.0" layoutY="741.0" opacity="0.23" prefHeight="241.0" prefWidth="1035.0"
-                   text="Code: Ventus34" textFill="#101010">
-                <font>
-                    <Font name="Bit Cell" size="29.0"/>
-                </font>
-            </Label>
-            <Label layoutX="375.0" layoutY="798.0" opacity="0.23" prefHeight="181.0" prefWidth="619.0"
-                   text="Layout created by Freepik" textFill="#101010">
-                <font>
-                    <Font name="Bit Cell" size="29.0"/>
-                </font>
-            </Label>
-            <ImageView fitHeight="730.0" fitWidth="859.0" layoutX="367.0" layoutY="188.0"
-                       pickOnBounds="true" preserveRatio="true">
-                <Image url="@graphics/super_wheel_mono.png"/>
-            </ImageView>
-        </AnchorPane>
-        <AnchorPane fx:id="ap_start" opacity="0.0" prefHeight="647.0" prefWidth="1335.0">
-            <Label alignment="CENTER" contentDisplay="CENTER" layoutX="371.0" layoutY="695.0" prefHeight="218.0"
-                   prefWidth="806.0" text="Press START" textAlignment="CENTER">
-                <font>
-                    <Font name="Bit Cell" size="150.0"/>
-                </font>
-                <textFill>
-                    <LinearGradient endX="0.47619047619047616" startX="0.4666666666666667">
-                        <stops>
-                            <Stop color="#ff1500"/>
-                            <Stop color="#ffc400" offset="1.0"/>
-                        </stops>
-                    </LinearGradient>
-                </textFill>
-            </Label>
-            <Label layoutX="375.0" layoutY="741.0" opacity="0.67" prefHeight="241.0" prefWidth="913.0"
-                   text="Code: Ventus34" textFill="#101010">
-                <font>
-                    <Font name="Bit Cell" size="35.0"/>
-                </font>
-            </Label>
-            <Label layoutX="376.0" layoutY="798.0" opacity="0.68" prefHeight="184.0" prefWidth="929.0"
-                   text="Layout created by Freepik" textFill="#101010">
-                <font>
-                    <Font name="Bit Cell" size="35.0"/>
-                </font>
-            </Label>
-            <ImageView fitHeight="730.0" fitWidth="859.0" layoutX="367.0" layoutY="188.0"
-                       pickOnBounds="true" preserveRatio="true">
-                <Image url="@graphics/super_wheel.png"/>
-            </ImageView>
-        </AnchorPane>
+<!--        <AnchorPane fx:id="ap_start_mono" prefHeight="647.0" prefWidth="1335.0">-->
+<!--            <Label alignment="CENTER" contentDisplay="CENTER" layoutX="372.0" layoutY="695.0" prefHeight="218.0"-->
+<!--                   prefWidth="802.0" text="Press START" textAlignment="CENTER" textFill="#4a490f">-->
+<!--                <font>-->
+<!--                    <Font name="Bit Cell" size="150.0"/>-->
+<!--                </font>-->
+<!--            </Label>-->
+<!--            <Label layoutX="375.0" layoutY="741.0" opacity="0.23" prefHeight="241.0" prefWidth="1035.0"-->
+<!--                   text="Code: Ventus34" textFill="#101010">-->
+<!--                <font>-->
+<!--                    <Font name="Bit Cell" size="29.0"/>-->
+<!--                </font>-->
+<!--            </Label>-->
+<!--            <Label layoutX="375.0" layoutY="798.0" opacity="0.23" prefHeight="181.0" prefWidth="619.0"-->
+<!--                   text="Layout created by Freepik" textFill="#101010">-->
+<!--                <font>-->
+<!--                    <Font name="Bit Cell" size="29.0"/>-->
+<!--                </font>-->
+<!--            </Label>-->
+<!--            <ImageView fitHeight="730.0" fitWidth="859.0" layoutX="367.0" layoutY="188.0"-->
+<!--                       pickOnBounds="true" preserveRatio="true">-->
+<!--                <Image url="@graphics/super_wheel_mono.png"/>-->
+<!--            </ImageView>-->
+<!--        </AnchorPane>-->
+        <fx:include fx:id="ap_start" source="splashColor.fxml" />
+        <fx:include fx:id="ap_start_mono" source="splashMono.fxml" />
+<!--        <AnchorPane fx:id="ap_start" opacity="0.0" prefHeight="647.0" prefWidth="1335.0">-->
+<!--            <Label alignment="CENTER" contentDisplay="CENTER" layoutX="371.0" layoutY="695.0" prefHeight="218.0"-->
+<!--                   prefWidth="806.0" text="Press START" textAlignment="CENTER">-->
+<!--                <font>-->
+<!--                    <Font name="Bit Cell" size="150.0"/>-->
+<!--                </font>-->
+<!--                <textFill>-->
+<!--                    <LinearGradient endX="0.47619047619047616" startX="0.4666666666666667">-->
+<!--                        <stops>-->
+<!--                            <Stop color="#ff1500"/>-->
+<!--                            <Stop color="#ffc400" offset="1.0"/>-->
+<!--                        </stops>-->
+<!--                    </LinearGradient>-->
+<!--                </textFill>-->
+<!--            </Label>-->
+<!--            <Label layoutX="375.0" layoutY="741.0" opacity="0.67" prefHeight="241.0" prefWidth="913.0"-->
+<!--                   text="Code: Ventus34" textFill="#101010">-->
+<!--                <font>-->
+<!--                    <Font name="Bit Cell" size="35.0"/>-->
+<!--                </font>-->
+<!--            </Label>-->
+<!--            <Label layoutX="376.0" layoutY="798.0" opacity="0.68" prefHeight="184.0" prefWidth="929.0"-->
+<!--                   text="Layout created by Freepik" textFill="#101010">-->
+<!--                <font>-->
+<!--                    <Font name="Bit Cell" size="35.0"/>-->
+<!--                </font>-->
+<!--            </Label>-->
+<!--            <ImageView fitHeight="730.0" fitWidth="859.0" layoutX="367.0" layoutY="188.0"-->
+<!--                       pickOnBounds="true" preserveRatio="true">-->
+<!--                <Image url="@graphics/super_wheel.png"/>-->
+<!--            </ImageView>-->
+<!--        </AnchorPane>-->
         <AnchorPane fx:id="ap_check" opacity="0.0" prefHeight="200.0" prefWidth="200.0">
             <Label alignment="TOP_LEFT" layoutX="387.0" layoutY="197.0" prefHeight="92.0" prefWidth="756.0"
                    text="Your prize:">
