--- a/src/main/resources/ventus/rggwheel/retroBoyMono/userInterface/splashMono.fxml
+++ b/src/main/resources/ventus/rggwheel/retroBoyMono/userInterface/splashMono.fxml
@@ -35,6 +35,6 @@
     </Label>
     <ImageView fitHeight="730.0" fitWidth="859.0" layoutX="367.0" layoutY="188.0"
                pickOnBounds="true" preserveRatio="true">
-        <Image url="@graphics/super_wheel_mono.png"/>
+        <Image url="@../graphics/super_wheel_mono.png"/>
     </ImageView>
 </AnchorPane>
