--- a/src/main/resources/ventus/rggwheel/retroBoyMono/userInterface/inventoryMono.fxml
+++ b/src/main/resources/ventus/rggwheel/retroBoyMono/userInterface/inventoryMono.fxml
@@ -8,7 +8,7 @@
 
 <AnchorPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
-            fx:controller="ventus.rggwheel.controllers.InventoryColorController"
+            fx:controller="ventus.rggwheel.controllers.color.InventoryColorController"
             prefHeight="400.0" prefWidth="600.0">
 
 </AnchorPane>
