--- a/src/main/resources/ventus/rggwheel/retroBoyMono/userInterface/splashMono.fxml
+++ b/src/main/resources/ventus/rggwheel/retroBoyMono/userInterface/splashMono.fxml
@@ -13,7 +13,7 @@
 <?import javafx.scene.text.Font?>
 <AnchorPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
-            fx:controller="ventus.rggwheel.controllers.SplashMonoController"
+            fx:controller="ventus.rggwheel.controllers.mono.SplashMonoController"
             opacity="100.0" prefHeight="647.0" prefWidth="1335.0">
     <Label alignment="CENTER" contentDisplay="CENTER" layoutX="372.0" layoutY="695.0" prefHeight="218.0"
            prefWidth="802.0" text="Press START" textAlignment="CENTER" textFill="#4a490f">
