--- a/src/main/resources/ventus/rggwheel/retroBoyColor/userInterface/wheelColor.fxml
+++ b/src/main/resources/ventus/rggwheel/retroBoyColor/userInterface/wheelColor.fxml
@@ -15,7 +15,7 @@
             xmlns:fx="http://javafx.com/fxml"
             fx:controller="ventus.rggwheel.controllers.color.WheelColorController"
             opacity="0.0" prefHeight="1025.0" prefWidth="1480.0">
-    <ImageView fx:id="wheel_color" fitHeight="593.0" fitWidth="605.0" layoutX="558.0"
+    <ImageView fx:id="wheelColor" fitHeight="593.0" fitWidth="605.0" layoutX="558.0"
                layoutY="234.0" pickOnBounds="true" preserveRatio="true">
         <Image url="@../graphics/wheel_color.png"/>
     </ImageView>
@@ -32,7 +32,7 @@
             </LinearGradient>
         </textFill>
     </Label>
-    <Label fx:id="spin_time" layoutX="627.0" layoutY="177.0" prefHeight="105.0" prefWidth="247.0"
+    <Label fx:id="spinTime" layoutX="627.0" layoutY="177.0" prefHeight="105.0" prefWidth="247.0"
            text="10" textFill="WHITE">
         <font>
             <Font name="Bit Cell" size="80.0"/>
