--- a/src/main/resources/ventus/rggwheel/retroBoyMono/userInterface/wheelMono.fxml
+++ b/src/main/resources/ventus/rggwheel/retroBoyMono/userInterface/wheelMono.fxml
@@ -25,7 +25,7 @@
             <Font name="Bit Cell" size="80.0"/>
         </font>
     </Label>
-    <Label fx:id="spin_time1" layoutX="627.0" layoutY="177.0" prefHeight="105.0" prefWidth="247.0"
+    <Label fx:id="spinTime1" layoutX="627.0" layoutY="177.0" prefHeight="105.0" prefWidth="247.0"
            text="10" textFill="#6c6b2d">
         <font>
             <Font name="Bit Cell" size="80.0"/>
