--- a/src/main/resources/ventus/rggwheel/retroBoy.fxml
+++ b/src/main/resources/ventus/rggwheel/retroBoy.fxml
@@ -68,21 +68,21 @@
                 <Font size="20.0"/>
             </font>
         </Button>
-        <Button fx:id="speed_up" disable="true" layoutX="143.0" layoutY="385.0" mnemonicParsing="false"
+        <Button fx:id="speedUp" disable="true" layoutX="143.0" layoutY="385.0" mnemonicParsing="false"
                 onAction="#moveUp" opacity="0.0" prefHeight="68.0" prefWidth="71.0" text="rotate_up"/>
-        <Button fx:id="speed_down" disable="true" layoutX="145.0" layoutY="512.0" mnemonicParsing="false"
+        <Button fx:id="speedDown" disable="true" layoutX="145.0" layoutY="512.0" mnemonicParsing="false"
                 onAction="#moveDown" opacity="0.0" prefHeight="70.0" prefWidth="71.0" text="rotate_down"/>
-        <Button fx:id="time_up" disable="true" layoutX="209.0" layoutY="441.0" mnemonicParsing="false"
+        <Button fx:id="timeUp" disable="true" layoutX="209.0" layoutY="441.0" mnemonicParsing="false"
                 onAction="#timeUp" opacity="0.0" prefHeight="87.0" prefWidth="48.0" text="time_up"/>
-        <Button fx:id="time_down" disable="true" layoutX="90.0" layoutY="451.0" mnemonicParsing="false"
+        <Button fx:id="timeDown" disable="true" layoutX="90.0" layoutY="451.0" mnemonicParsing="false"
                 onAction="#timeDown" opacity="0.0" prefHeight="77.0" prefWidth="60.0" text="time_down"/>
-        <Button fx:id="start_button" layoutX="188.0" layoutY="618.0" mnemonicParsing="false" onAction="#start"
+        <Button fx:id="startButton" layoutX="188.0" layoutY="618.0" mnemonicParsing="false" onAction="#start"
                 opacity="0.0" prefHeight="77.0" prefWidth="86.0" text="start"/>
         <Button fx:id="color" layoutX="84.0" layoutY="613.0" mnemonicParsing="false" onAction="#pickColor"
                 opacity="0.0" prefHeight="87.0" prefWidth="91.0" text="info"/>
         <Button fx:id="check" disable="true" layoutX="1287.0" layoutY="543.0" mnemonicParsing="false"
                 onAction="#checkPrize" opacity="0.0" prefHeight="87.0" prefWidth="86.0" text="check"/>
-        <Button fx:id="color_mode" layoutX="223.0" layoutY="61.0" mnemonicParsing="false" onAction="#switchMode"
+        <Button fx:id="colorMode" layoutX="223.0" layoutY="61.0" mnemonicParsing="false" onAction="#switchMode"
                 opacity="0.0" prefHeight="29.0" prefWidth="48.0" text="mode_switch"/>
         <ImageView fx:id="color_label" fitHeight="36.0" fitWidth="164.0" layoutX="821.0" layoutY="934.0"
                    onMouseClicked="#reset" opacity="0.0" pickOnBounds="true" preserveRatio="true">
