Many improvements, added save states; first RC

--- a/src/main/resources/ventus/rggwheel/retroBoyColor/userInterface/prizeDescriptionColor.fxml
+++ b/src/main/resources/ventus/rggwheel/retroBoyColor/userInterface/prizeDescriptionColor.fxml
@@ -29,7 +29,7 @@
             </LinearGradient>
         </textFill>
     </Label>
-    <Label fx:id="prize_label" layoutX="668.0" layoutY="180.0" prefHeight="105.0" prefWidth="731.0"
+    <Label fx:id="prizeLabel" layoutX="668.0" layoutY="180.0" prefHeight="105.0" prefWidth="731.0"
            text="???" textFill="WHITE">
         <font>
             <Font name="Bit Cell" size="76.0"/>
@@ -49,7 +49,7 @@
             </LinearGradient>
         </textFill>
     </Label>
-    <Label fx:id="effect_label" alignment="TOP_LEFT" contentDisplay="TOP" layoutX="387.0"
+    <Label fx:id="prizeDescription" alignment="TOP_LEFT" contentDisplay="TOP" layoutX="387.0"
            layoutY="350.0" prefHeight="528.0" prefWidth="770.0" text="???" textFill="WHITE"
            wrapText="true">
         <font>
