--- a/src/main/resources/ventus/rggwheel/retroBoy.fxml
+++ b/src/main/resources/ventus/rggwheel/retroBoy.fxml
@@ -1,108 +1,70 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.*?>
+<?import javafx.scene.effect.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<?import javafx.scene.layout.Pane?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.effect.ColorAdjust?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.text.Font?>
-<?import javafx.scene.paint.LinearGradient?>
-<?import javafx.scene.paint.Stop?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.TextArea?>
-<Pane fx:id="root_pane" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ventus.rggwheel.controllers.RetroBoyController">
+<Pane fx:id="root_pane" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ventus.rggwheel.controllers.RetroBoyController">
     <AnchorPane fx:id="retroBoyPane">
-        <ImageView fx:id="backgroundMono" fitHeight="1035.0" fitWidth="1480.0" mouseTransparent="true"
-                   pickOnBounds="true">
+        <ImageView fx:id="backgroundMono" fitHeight="1035.0" fitWidth="1480.0" mouseTransparent="true" pickOnBounds="true">
             <effect>
-                <ColorAdjust/>
+                <ColorAdjust />
             </effect>
-            <Image url="@retroBoyMono/graphics/background_mono.png"/>
+            <Image url="@retroBoyMono/graphics/background_mono.png" />
         </ImageView>
-        <ImageView fx:id="backgroundColor" fitHeight="1035.0" fitWidth="1480.0" mouseTransparent="true" opacity="0.0"
-                   pickOnBounds="true">
+        <ImageView fx:id="backgroundColor" fitHeight="1035.0" fitWidth="1480.0" mouseTransparent="true" opacity="0.0" pickOnBounds="true">
             <effect>
-                <ColorAdjust/>
+                <ColorAdjust />
             </effect>
-            <Image url="@retroBoyColor/graphics/background_color.png"/>
+            <Image url="@retroBoyColor/graphics/background_color.png" />
         </ImageView>
         <fx:include fx:id="splashColor" source="retroBoyColor/userInterface/splashColor.fxml" />
         <fx:include fx:id="splashMono" source="retroBoyMono/userInterface/splashMono.fxml" />
-        <fx:include fx:id="prizeDescriptionColor" source="retroBoyColor/userInterface/prizeDescriptionColor.fxml"/>
-        <fx:include fx:id="prizeDescriptionMono" source="retroBoyMono/userInterface/prizeDescriptionMono.fxml"/>
+        <fx:include fx:id="prizeDescriptionColor" source="retroBoyColor/userInterface/prizeDescriptionColor.fxml" />
+        <fx:include fx:id="prizeDescriptionMono" source="retroBoyMono/userInterface/prizeDescriptionMono.fxml" />
         <fx:include fx:id="wheelColor" source="retroBoyColor/userInterface/wheelColor.fxml" />
         <fx:include fx:id="wheelMono" source="retroBoyMono/userInterface/wheelMono.fxml" />
         <fx:include fx:id="inventoryColor" source="retroBoyColor/userInterface/inventoryColor.fxml" />
         <fx:include fx:id="inventoryMono" source="retroBoyMono/userInterface/inventoryMono.fxml" />
-        <ImageView fitHeight="1036.0" fitWidth="1478.0" mouseTransparent="true" pickOnBounds="true"
-                   preserveRatio="true">
-            <Image url="@retroBoyColor/graphics/button_ab.png"/>
+        <ImageView fitHeight="1036.0" fitWidth="1478.0" mouseTransparent="true" pickOnBounds="true" preserveRatio="true">
+            <Image url="@retroBoyColor/graphics/button_ab.png" />
         </ImageView>
         <fx:include fx:id="statisticsColor" source="retroBoyColor/userInterface/statisticsColor.fxml" />
-        <fx:include fx:id="prizesHistoryColor" source="retroBoyColor/userInterface/prizesHistoryColor.fxml"/>
-        <fx:include fx:id="prizesHistoryMono" source="retroBoyMono/userInterface/prizesHistoryMono.fxml"/>
+        <fx:include fx:id="prizesHistoryColor" source="retroBoyColor/userInterface/prizesHistoryColor.fxml" />
+        <fx:include fx:id="prizesHistoryMono" source="retroBoyMono/userInterface/prizesHistoryMono.fxml" />
         <fx:include fx:id="statisticsMono" source="retroBoyMono/userInterface/statisticsMono.fxml" />
-        <Label fx:id="test" layoutX="83.0" layoutY="751.0" opacity="0.0" prefHeight="127.0" prefWidth="199.0"
-               text="Active effect: Invincibility Potion" textAlignment="CENTER" wrapText="true">
+        <Label fx:id="test" layoutX="83.0" layoutY="751.0" opacity="0.0" prefHeight="127.0" prefWidth="199.0" text="Active effect: Invincibility Potion" textAlignment="CENTER" wrapText="true">
             <font>
-                <Font name="Bit Cell" size="39.0"/>
+                <Font name="Bit Cell" size="39.0" />
             </font>
         </Label>
-        <Label fx:id="rb_color" layoutX="512.0" layoutY="892.0" opacity="0.0" prefHeight="112.0" prefWidth="721.0"
-               text="RETRO BOY" textFill="WHITE">
+        <Label fx:id="rb_color" layoutX="512.0" layoutY="892.0" opacity="0.0" prefHeight="112.0" prefWidth="721.0" text="RETRO BOY" textFill="WHITE">
             <font>
-                <Font name="Emulogic" size="32.0"/>
+                <Font name="Emulogic" size="32.0" />
             </font>
         </Label>
-        <Label fx:id="rb_mono" layoutX="640.0" layoutY="902.0" prefHeight="92.0" prefWidth="741.0" text="RETRO BOY"
-               textFill="WHITE">
+        <Label fx:id="rb_mono" layoutX="640.0" layoutY="902.0" prefHeight="92.0" prefWidth="741.0" text="RETRO BOY" textFill="WHITE">
             <font>
-                <Font name="Emulogic" size="32.0"/>
+                <Font name="Emulogic" size="32.0" />
             </font>
         </Label>
-        <Button fx:id="spin_button" disable="true" layoutX="1350.0" layoutY="452.0" mnemonicParsing="false"
-                onAction="#spinAction" opacity="0.0" prefHeight="92.0" prefWidth="79.0" text="Spin a wheel!">
+        <Button fx:id="spinButton" disable="true" layoutX="1350.0" layoutY="452.0" mnemonicParsing="false" onAction="#spinAction" opacity="0.0" prefHeight="92.0" prefWidth="79.0" text="Spin a wheel!">
             <font>
-                <Font size="20.0"/>
+                <Font size="20.0" />
             </font>
         </Button>
-        <Button fx:id="speedUp" disable="true" layoutX="143.0" layoutY="385.0" mnemonicParsing="false"
-                onAction="#moveUp" opacity="0.0" prefHeight="68.0" prefWidth="71.0" text="rotate_up"/>
-        <Button fx:id="speedDown" disable="true" layoutX="145.0" layoutY="512.0" mnemonicParsing="false"
-                onAction="#moveDown" opacity="0.0" prefHeight="70.0" prefWidth="71.0" text="rotate_down"/>
-        <Button fx:id="timeUp" disable="true" layoutX="209.0" layoutY="441.0" mnemonicParsing="false"
-                onAction="#timeUp" opacity="0.0" prefHeight="87.0" prefWidth="48.0" text="time_up"/>
-        <Button fx:id="timeDown" disable="true" layoutX="90.0" layoutY="451.0" mnemonicParsing="false"
-                onAction="#timeDown" opacity="0.0" prefHeight="77.0" prefWidth="60.0" text="time_down"/>
-        <Button fx:id="startButton" layoutX="188.0" layoutY="618.0" mnemonicParsing="false" onAction="#start"
-                opacity="0.0" prefHeight="77.0" prefWidth="86.0" text="start"/>
-        <Button fx:id="color" layoutX="84.0" layoutY="613.0" mnemonicParsing="false" onAction="#pickColor"
-                opacity="0.0" prefHeight="87.0" prefWidth="91.0" text="info"/>
-        <Button fx:id="check" disable="true" layoutX="1287.0" layoutY="543.0" mnemonicParsing="false"
-                onAction="#checkPrize" opacity="0.0" prefHeight="87.0" prefWidth="86.0" text="check"/>
-        <Button fx:id="colorMode" layoutX="223.0" layoutY="61.0" mnemonicParsing="false" onAction="#switchMode"
-                opacity="0.0" prefHeight="29.0" prefWidth="48.0" text="mode_switch"/>
-        <ImageView fx:id="color_label" fitHeight="36.0" fitWidth="164.0" layoutX="821.0" layoutY="934.0"
-                   onMouseClicked="#reset" opacity="0.0" pickOnBounds="true" preserveRatio="true">
-            <Image url="@retroBoyColor/graphics/color.png"/>
+        <Button fx:id="speedUp" disable="true" layoutX="143.0" layoutY="385.0" mnemonicParsing="false" onAction="#moveUp" opacity="0.0" prefHeight="68.0" prefWidth="71.0" text="rotate_up" />
+        <Button fx:id="speedDown" disable="true" layoutX="145.0" layoutY="512.0" mnemonicParsing="false" onAction="#moveDown" opacity="0.0" prefHeight="70.0" prefWidth="71.0" text="rotate_down" />
+        <Button fx:id="timeUp" disable="true" layoutX="209.0" layoutY="441.0" mnemonicParsing="false" onAction="#timeUp" opacity="0.0" prefHeight="87.0" prefWidth="48.0" text="time_up" />
+        <Button fx:id="timeDown" disable="true" layoutX="90.0" layoutY="451.0" mnemonicParsing="false" onAction="#timeDown" opacity="0.0" prefHeight="77.0" prefWidth="60.0" text="time_down" />
+        <Button fx:id="startButton" layoutX="188.0" layoutY="618.0" mnemonicParsing="false" onAction="#start" opacity="0.0" prefHeight="77.0" prefWidth="86.0" text="start" />
+        <Button fx:id="color" layoutX="84.0" layoutY="613.0" mnemonicParsing="false" onAction="#pickColor" opacity="0.0" prefHeight="87.0" prefWidth="91.0" text="info" />
+        <Button fx:id="check" disable="true" layoutX="1287.0" layoutY="543.0" mnemonicParsing="false" onAction="#checkPrize" opacity="0.0" prefHeight="87.0" prefWidth="86.0" text="check" />
+        <Button fx:id="colorMode" layoutX="223.0" layoutY="61.0" mnemonicParsing="false" onAction="#switchMode" opacity="0.0" prefHeight="29.0" prefWidth="48.0" text="mode_switch" />
+        <ImageView fx:id="color_label" fitHeight="36.0" fitWidth="164.0" layoutX="821.0" layoutY="934.0" onMouseClicked="#reset" opacity="0.0" pickOnBounds="true" preserveRatio="true">
+            <Image url="@retroBoyColor/graphics/color.png" />
         </ImageView>
-    </AnchorPane>
-    <AnchorPane fx:id="log_screen" mouseTransparent="true" opacity="0.0" prefHeight="1033.0" prefWidth="1479.0"
-                style="-fx-background-color: FFFFFF;">
-        <TextArea fx:id="view_log" editable="false" layoutX="53.0" layoutY="99.0" prefHeight="856.0"
-                  prefWidth="721.0" promptText="Log">
-            <font>
-                <Font size="16.0"/>
-            </font>
-        </TextArea>
-        <TextArea fx:id="view_prizes" editable="false" layoutX="792.0" layoutY="100.0" prefHeight="856.0"
-                  prefWidth="619.0" promptText="Prizes list">
-            <font>
-                <Font size="16.0"/>
-            </font>
-        </TextArea>
-        <Button layoutX="1346.0" layoutY="981.0" mnemonicParsing="false" onAction="#generateStats" text="Back"/>
     </AnchorPane>
 </Pane>
