--- a/src/main/resources/ventus/rggwheel/retroBoyMono/userInterface/inventoryMono.fxml
+++ b/src/main/resources/ventus/rggwheel/retroBoyMono/userInterface/inventoryMono.fxml
@@ -1,85 +1,41 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
+<?import javafx.scene.paint.*?>
+<?import javafx.scene.text.*?>
 
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.text.Font?>
-<Pane xmlns="http://javafx.com/javafx"
-      xmlns:fx="http://javafx.com/fxml"
-      fx:controller="ventus.rggwheel.controllers.mono.InventoryMonoController"
-      layoutX="371.0" layoutY="192.0" opacity="0.0" prefHeight="712.0"
-      prefWidth="809.0">
-    <Label layoutX="132.0" layoutY="100.0" text="Hints" textFill="#4a490f">
+<Pane layoutX="372.0" layoutY="192.0" opacity="0.0" prefHeight="712.0" prefWidth="809.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ventus.rggwheel.controllers.mono.InventoryMonoController">
+    <Label layoutX="179.0" layoutY="101.0" text="Hints" textFill="#214236">
         <font>
-            <Font name="Bit Cell" size="72.0"/>
+            <Font name="Bit Cell" size="72.0" />
         </font>
     </Label>
-    <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="111.0" layoutY="489.0"
-               onContextMenuRequested="#addInv" onMouseClicked="#useInv" pickOnBounds="true"
-               preserveRatio="true">
-        <Image url="@../graphics/inv_potion_mono.png"/>
+    <Label layoutX="261.0" text="Inventory" textFill="#214236" textAlignment="CENTER">
+        <font>
+            <Font name="Bit Cell" size="96.0" />
+        </font>
+    </Label>
+    <ImageView fitHeight="351.0" fitWidth="319.0" layoutX="55.0" layoutY="199.0" onMouseClicked="#useHint" pickOnBounds="true" preserveRatio="true">
+        <Image url="@../graphics/manuel_icon_mono.png" />
     </ImageView>
-    <Label layoutX="261.0" text="Inventory" textAlignment="CENTER" textFill="#4a490f">
-        <font>
-            <Font name="Bit Cell" size="96.0"/>
-        </font>
-    </Label>
-    <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="111.0" layoutY="168.0"
-               onContextMenuRequested="#addHint" onMouseClicked="#useHint" pickOnBounds="true"
-               preserveRatio="true">
-        <Image url="@../graphics/manuel_icon_mono.png"/>
+    <ImageView fitHeight="450.0" fitWidth="325.0" layoutX="461.0" layoutY="196.0" onMouseClicked="#useReroll" pickOnBounds="true" preserveRatio="true">
+        <Image url="@../graphics/reroll_potion_mono.png" />
     </ImageView>
-    <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="549.0" layoutY="168.0"
-               onContextMenuRequested="#addChat" onMouseClicked="#useChat" pickOnBounds="true"
-               preserveRatio="true">
-        <Image url="@../graphics/twitch_icon_mono.png"/>
-    </ImageView>
-    <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="549.0" layoutY="489.0"
-               onMouseClicked="#useReroll" pickOnBounds="true" preserveRatio="true">
-        <Image url="@../graphics/reroll_potion_mono.png"/>
-    </ImageView>
-    <Label layoutX="499.0" layoutY="100.0" text="Consult Chat" textFill="#4a490f">
+    <Label layoutX="483.0" layoutY="101.0" text="Reroll Potion" textFill="#214236">
         <font>
-            <Font name="Bit Cell" size="72.0"/>
+            <Font name="Bit Cell" size="72.0" />
         </font>
     </Label>
-    <Label layoutX="19.0" layoutY="421.0" text="Invincibility Potion" textFill="#4a490f">
+    <Label fx:id="hintsAmount" alignment="CENTER" contentDisplay="CENTER" layoutX="159.0" layoutY="532.0" onMouseClicked="#addHint" text="Left: -" textFill="#214236">
         <font>
-            <Font name="Bit Cell" size="63.0"/>
+            <Font name="Bit Cell" size="55.0" />
         </font>
     </Label>
-    <Label layoutX="500.0" layoutY="421.0" text="Reroll Potion" textFill="#4a490f">
+    <Label fx:id="rerollPotionAmount" alignment="CENTER" contentDisplay="CENTER" layoutX="545.0" layoutY="532.0" onMouseClicked="#addReroll" text="Left: -" textFill="#214236">
         <font>
-            <Font name="Bit Cell" size="63.0"/>
-        </font>
-    </Label>
-    <Label fx:id="hints_mono" alignment="CENTER" contentDisplay="CENTER" layoutX="133.0" layoutY="339.0"
-           onMouseClicked="#addHint" text="Left: 4" textFill="#4a490f">
-        <font>
-            <Font name="Bit Cell" size="55.0"/>
-        </font>
-    </Label>
-    <Label fx:id="chat_mono" alignment="CENTER" contentDisplay="CENTER" layoutX="574.0" layoutY="339.0"
-           onMouseClicked="#addChat" text="Left: 0" textFill="#4a490f">
-        <font>
-            <Font name="Bit Cell" size="55.0"/>
-        </font>
-    </Label>
-    <Label fx:id="inv_pot_mono" alignment="CENTER" contentDisplay="CENTER" layoutX="91.0"
-           layoutY="651.0" onMouseClicked="#addInv" text="Out of stock" textFill="#4a490f">
-        <font>
-            <Font name="Bit Cell" size="55.0"/>
-        </font>
-    </Label>
-    <Label fx:id="reroll_pot_mono" alignment="CENTER" contentDisplay="CENTER" layoutX="574.0"
-           layoutY="651.0" onMouseClicked="#addReroll" text="Left: 1" textFill="#4a490f">
-        <font>
-            <Font name="Bit Cell" size="55.0"/>
+            <Font name="Bit Cell" size="55.0" />
         </font>
     </Label>
 </Pane>
