--- a/src/main/resources/ventus/rggwheel/retroBoyMono/userInterface/prizeDescriptionMono.fxml
+++ b/src/main/resources/ventus/rggwheel/retroBoyMono/userInterface/prizeDescriptionMono.fxml
@@ -20,7 +20,7 @@
         </font>
     </Label>
     <Label fx:id="prizeLabel" layoutX="669.0" layoutY="181.0" prefHeight="105.0" prefWidth="738.0"
-           text="???" textFill="#6c6b2d">
+           text="???" textFill="#214236">
         <font>
             <Font name="Bit Cell" size="76.0"/>
         </font>
@@ -32,7 +32,7 @@
         </font>
     </Label>
     <Label fx:id="prizeDescription" alignment="TOP_LEFT" contentDisplay="TOP" layoutX="388.0"
-           layoutY="350.0" prefHeight="554.0" prefWidth="781.0" text="???" textFill="#6c6b2d"
+           layoutY="350.0" prefHeight="554.0" prefWidth="781.0" text="???" textFill="#214236"
            wrapText="true">
         <font>
             <Font name="Bit Cell" size="80.0"/>
