--- a/src/main/resources/ventus/rggwheel/retroBoyMono/userInterface/splashMono.fxml
+++ b/src/main/resources/ventus/rggwheel/retroBoyMono/userInterface/splashMono.fxml
@@ -16,18 +16,18 @@
             fx:controller="ventus.rggwheel.controllers.mono.SplashMonoController"
             opacity="100.0" prefHeight="647.0" prefWidth="1335.0">
     <Label alignment="CENTER" contentDisplay="CENTER" layoutX="372.0" layoutY="695.0" prefHeight="218.0"
-           prefWidth="802.0" text="Press START" textAlignment="CENTER" textFill="#4a490f">
+           prefWidth="802.0" text="Press START" textAlignment="CENTER" textFill="#214236">
         <font>
             <Font name="Bit Cell" size="150.0"/>
         </font>
     </Label>
-    <Label layoutX="375.0" layoutY="741.0" opacity="0.23" prefHeight="241.0" prefWidth="1035.0"
+    <Label layoutX="375.0" layoutY="741.0" opacity="0.15" prefHeight="241.0" prefWidth="1035.0"
            text="Code: Ventus34" textFill="#101010">
         <font>
             <Font name="Bit Cell" size="29.0"/>
         </font>
     </Label>
-    <Label layoutX="375.0" layoutY="798.0" opacity="0.23" prefHeight="181.0" prefWidth="619.0"
+    <Label layoutX="375.0" layoutY="798.0" opacity="0.15" prefHeight="181.0" prefWidth="619.0"
            text="Layout created by Freepik" textFill="#101010">
         <font>
             <Font name="Bit Cell" size="29.0"/>
